--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,6 @@ on:
     branches:
         - main
     paths:
-        - 'bicep/**'
         - '.github/workflows/deploy.yml'
         
   workflow_dispatch:
@@ -16,10 +15,6 @@ permissions:
     contents: read
     id-token: write
     actions: read
-
-env:
-  rgName: rg-ukw-sandbox-pmc-zsp-deploy-test
-  location: ukwest
 
 jobs:
   access:
@@ -35,7 +30,7 @@ jobs:
             -H "x-functions-key: ${{ secrets.AZURE_FUNCTION_KEY }}" \
             -d '{
               "sp_object_id": "${{ secrets.AZURE_SP_OBJECT_ID }}",
-              "scope": "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ env.rgName }}",
+              "scope": "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}",
               "role": "Contributor",
               "duration_minutes": 5,
               "workflow_id": "github-actions"
@@ -43,8 +38,8 @@ jobs:
       
       - name: Wait for Azure Role Assignment
         run: |
-          echo "Waiting for 15 seconds to allow Azure Role Assignment to propagate..."
-          sleep 15
+          echo "Waiting for 10 seconds to allow Azure Role Assignment to propagate..."
+          sleep 10
         shell: bash
 
       - name: Azure Login
