--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,7 @@ jobs:
               }'
       
       - name: Wait for Azure Role Assignment
+      # This seems to be required as there is a delay between the role assignment being created and it being available for use.
         run: |
           echo "Waiting for 20 seconds to allow Azure Role Assignment to propagate..."
           sleep 20
